--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -65,7 +65,7 @@ _gaq.push(['_trackPageview']);
 
 {% block content %}
 <header>
-  <div id="topnav"><a href="/">Startseite</a> | <a href="http://openruhr.de/">Blog</a> | <a href="/impressum">Impressum</a> | <a href="/datenschutz/">Datenschutz</a></div>
+  <div id="topnav"><a href="/">Startseite</a> | <a href="http://openruhr.de/">Blog</a> | <a href="/impressum">Impressum</a> | <a href="/datenschutz">Datenschutz</a></div>
   <div id="logo"><a href="/"><img src="/static/img/logo/PolitikBeiUns.png" alt="Politik Bei Uns Logo" /></a></div>
   <div id="nametagline">
     <div><a id="name" href="/">Offenes Ratsinformationssystem</a></div>
