--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -24,13 +24,13 @@
 
 {% block styles %}
 {{super()}}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/style.min.css') }}?v=0.1.1"/>
+<link rel="stylesheet" href="{% if config['debug'] %}{{ url_for('static', filename='css/style.css') }}{% else %}{{ url_for('static', filename='css/style.min.css') }}{% endif %}?v=0.1.1"/>
 {% endblock %}
 
 {% block scripts %}
 {{super()}}
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-ui.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/script.min.js') }}?v=0.1.1"></script>
+<script type="text/javascript" src="{% if config['debug'] %}{{ url_for('static', filename='js/script.js') }}{% else %}{{ url_for('static', filename='js/script.min.js') }}{% endif %}?v=0.1.1"></script>
 {% if config['tracking'] == 'analytics' %}
 <script type="text/javascript">
 var _gaq = _gaq || [];
