--- a/webapp/templates/suche.html
+++ b/webapp/templates/suche.html
@@ -31,7 +31,7 @@ var openris_search_settings = {
   date: "{{ search_settings.date }}"// date range
 };
 </script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/search.min.js') }}?v=0.1.1"></script>
+<script type="text/javascript" src="{% if config['debug'] %}{{ url_for('static', filename='js/search.js') }}{% else %}{{ url_for('static', filename='js/search.min.js') }}{% endif %}?v={{ config['css_js_version'] }}"></script>
 {% endblock %}
 
 {% block riscontent %}
