--- a/webapp/templates/ueber.html
+++ b/webapp/templates/ueber.html
@@ -19,6 +19,7 @@
   <blockquote class="nice">Ziel des offenen Ratsinformationssystems ist es, Informationen, Dokumente und Daten aus der Kommunalpolitik deutschlandweit für jedermann offen zugänglich zu machen.</blockquote>
   <p>Dazu werden auf Dokumente und Daten, die in den jeweiligen Ratsinformationssystemen vor Ort veröffentlicht werden, gesammelt, aufbereitet und in einer nutzerfreundlichen Art und Weise dargestellt.</p>
   <p>Wir wollen das offizielle Ratsinformationssystem nicht ersetzen, sondern eine Alternative bieten. Die offiziellen Ratsinformationssysteme sind optimal für die tägliche Arbeit der Verwaltung und der politisch aktiven. Doch für einen einfachen Einstieg braucht es eine andere Oberfläche. Diese wollen wir anbieten.</p>
+	<p>Wir haben das Ziel, alle Daten ab dem 1.1.2010 vollständig bereitzustellen.</p>
 </div>
 <div class="content middle" id="feedback">
   <h2 class="top-nomargin">Wünsche äußern & weitere Städte</h2>
